Fixed an align issue and cleaning code

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,22 +3,21 @@
 	src: url('Fonts/Minecraft.ttf');
 }
 
-:root {
-	--hideColor: #999999;
-}
-
 #root {
-	margin: 0;
 	font-family: 'Minecraft', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
 		'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: gray;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .App {
-	height: auto;
-	width: auto;
+	width: 100%;
+	height: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -39,8 +38,4 @@
 		width: 40px;
 		height: 40px;
 	}
-}
-
-.caseHidden {
-	background-color: var(--hideColor);
 }
